# optionsfi

./: .gitignore  AGENTS.md  DEPLOYMENT_CHECKLIST.md  README.md  README_V2.md  SECURITY.md  upgrade-verification-results.json
PRD/: week1_2_prd.md
app/.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
app/anchor/: vault.json  vault_idl.json
app/app/: globals.css  layout.tsx
app/app/v2/: layout.tsx  (+1 more)
app/components/: AppWalletProvider.tsx  DemoPanel.tsx  Navbar.tsx
app/hooks/: useRfq.ts  useSettings.tsx  useVault.ts  useVaultTiming.ts  useWalletActivity.ts
app/lib/: rfq-client.ts  vault-config.ts  vault-sdk.ts  vault-timing.ts
app/utils/: constants.ts
docs/: architecture.mdx  introduction.mdx  mint.json
docs/api-reference/: rfq-client.mdx
docs/guides/: handling-quotes.mdx
docs/security/: overview.mdx
infra/keeper/: Dockerfile  package-lock.json  package.json  railway.json
infra/rfq-router/: Dockerfile.mock-mm  index.js  mock-mm.js  multi-mm.js  package.json  railway.json  security-middleware.js
infra/rust-mm/: Cargo.toml  Dockerfile  README.md  example.env  railway.json
infra/rust-mm/src/: main.rs
infra/security/: package-lock.json
scripts/: add-metadata.ts  check-holdings.ts  check-vault.ts  cleanup-tokens.ts  convert-key.js  create-nvdax.ts  create-usdc.ts  create-vnvdax-metadata.ts  debug-roll.ts  fix-vault-shortfall.ts  init-demo-vault.ts  init-vault.ts  inspect-vault.ts  inspect-withdrawal.ts  package-lock.json  package.json  scripts_guide.md  setup-demo.ts  verify-key.ts  verify-upgrade.ts
(+166 files in other folders)
