[package]
name = "rust-mm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
bs58 = "0.5"
dotenv = "0.15"
rand = "0.8"
url = "2.4"
log = "0.4"
env_logger = "0.10"
spl-token = "4.0"
spl-associated-token-account = "2.2"
